<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hanze Schedule</string>

    <string name="login_header">Log in</string>
    <string name="login_body">
        Please enter the credentials you use to log in to Digirooster.
    </string>

    <string name="login_error_generic">
        Something went wrong. Double-check your username and password.
        You might have no internet, or something else could\'ve fucked up. Yay, beta!
    </string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="quit">Quit</string>

    <string name="scheduleedit_add_new">Add new schedule</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="select_school">Select a school</string>
    <string name="select_class">Select a class</string>

    <string name="navigate_edit_schedule">Edit schedule</string>
    <string name="navigate_absent_teachers">Absent teachers</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

</resources>
