<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Header with colored background -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/primary_dark">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/text_light"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/login_header" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="32dp"
                    android:textColor="@color/text_light"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/login_body" />

        </LinearLayout>

        <!-- Main container with loading overlay -->
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!-- Form container -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <!-- Error message -->
                <TextView
                        android:id="@+id/error_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:visibility="gone"
                        android:textColor="@color/text_error" />

                <!-- Username input -->
                <EditText
                        android:id="@+id/username_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/username" />

                <!-- Password input -->
                <EditText
                        android:id="@+id/password_input"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/password" />

                <!-- Forgot password -->
                <Button
                        android:id="@+id/forgot_password_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/primary"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <!-- Container to align login button -->
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="right"
                        android:clipToPadding="false">

                    <!-- Login button -->
                    <Button
                            android:id="@+id/login_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:layout_marginBottom="24dp"
                            android:text="@string/log_in"
                            style="@style/Widget.AppCompat.Button.Colored" />

                </LinearLayout> <!-- Login container -->

            </LinearLayout> <!-- Form container -->

            <!-- Loading overlay -->
            <RelativeLayout
                    android:id="@+id/loading_overlay"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:background="#80000000"
                    android:visibility="invisible">

                <!-- Loading spinner -->
                <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/primary" />

            </RelativeLayout> <!-- Loading overlay -->

        </RelativeLayout> <!-- Form + loading contrainer -->

    </LinearLayout> <!-- Main container -->

</ScrollView> <!-- Root container -->
